feat: 统一 Demo 配置体系、完善 engineering 双实现与增强技术方案
- 抽取 framework-core OpenAiDemoConfigSupport 共享配置支持类，7 个模块 PropertySupport 收敛为委托模式
- 统一 application-llm-local.yml 分层加载，收窄各模块 demo-local 职责
- 完善 multi-agent-engineering 双实现（handwritten + A2A framework）教学注释与测试覆盖
- 新增 A2aHttpTransportSupport、Provider/Consumer MVC 契约测试、MQ 增强层契约测试
- 新增 Nacos & RocketMQ 增强技术方案（断路器、OTel Trace、MQ 混合模式等 6 项改进）
- 补齐多智能体工程范式教学文档